# sketch

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: product-plan.md
installer/: build.ps1  setup.iss
scripts/: build-installer.ps1  run.ps1  test.ps1
src/sketch_assistant/: __init__.py  __main__.py  app.py  config.py  exporter.py  gemini.py  storage.py
src/sketch_assistant/resources/checklists/: thai_lowrise_residential.json
tests/: test_storage.py
worker/: sketch_worker.py
